graceful shutdown, float dto, fix swag
